buildscript {
    repositories {
        google()
        jcenter()

    }

    dependencies {

        classpath 'com.android.tools.build:gradle:4.1.3'

        // NOTE: Do not place your application dependencies here; they belong
        // in the individual module build.gradle files
    }


}

plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
//    id 'kotlin-android'
//    id 'kotlin-android-extensions'
    id 'kotlin-kapt'
    // Add the Firebase Crashlytics plugin.
    id 'com.google.firebase.crashlytics'
    id("com.google.gms.google-services")
}

//allprojects {
//
//    repositories {
//        google()
//        mavenCentral()
//        maven { url 'https://maven.google.com/' }
//
//    }
//    repositories {
//        mavenLocal()
//        jcenter()
//        // ADD IT HERE
//        maven { url 'https://www.jitpack.io' }
//
//    }
//
//}

// Create a variable called keystorePropertiesFile, and initialize it to your
// keystore.properties file, in the rootProject folder.
//def keystorePropertiesFile = rootProject.file("keystore.properties")
//
//// Initialize a new Properties() object called keystoreProperties.
//def keystoreProperties = new Properties()
//
//// Load your keystore.properties file into the keystoreProperties object.
//keystoreProperties.load(new FileInputStream(keystorePropertiesFile))

android {
    namespace = "webtech.com.courierdriver"
    compileSdk = 35
    defaultConfig {
        applicationId "webtech.com.courierdriver"
        minSdkVersion 24
        targetSdkVersion 33
        versionCode 54 // will be  use by google play store to avail new update
        versionName "1.5.4" // you can use to show it to user
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"

        multiDexEnabled true

        tasks.withType(JavaCompile).configureEach{options.fork = true
            options.forkOptions.jvmArgs +=[
                    '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                    '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                    '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']}
    }


    buildFeatures {
        viewBinding = true
        buildConfig true
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    kotlinOptions {
        jvmTarget = "1.8"
    }
    packagingOptions {

        exclude("META-INF/*.kotlin_module")
        resources.excludes.add("META-INF/*")

    }


    configurations.all {
        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
    }
    lintOptions {
        checkReleaseBuilds false
        // Or, if you prefer, you can continue to check for errors in release builds,
        // but continue the build even when errors are found:
        abortOnError false
    }


    signingConfigs {

        release {
            //keeping release storeFile , storePassword and keyAlias and keyPassword is not safe
            /// alternate options is via config read values from keystore.properties file
            //To do this, you should create a separate properties file to store secure information and refer to that file in your build files
//            storeFile file("E:\\WebTechWorkSpace\\WebTechOGoDriver\\OGoDriverKeyStore\\ogo_key_store.jks")
//            storeFile file("D:\\WebtechProjects\\OgoDeliveryDriverKeyStore\\ogo_key_store.jks")
//            storePassword "m@9777038915"
//            keyAlias "ogodriverapk"
//            keyPassword "m@9777038915"
            // optional
            v1SigningEnabled true
            v2SigningEnabled true
        }
    }


    buildTypes {

        def FIREBASE_SECRATE_NODE_TEST = "FIREBASE_SECRATE_NODE_TEST"
        def FIREBASE_SECRATE_NODE_LIVE_FOR_TESTING = "FIREBASE_SECRATE_NODE_LIVE_FOR_TESTING"
        def FIREBASE_SECRATE_NODE = "FIREBASE_SECRATE_NODE"

        def FIREBASE_SECRATE_NODE_FINAL = "FIREBASE_SECRATE_NODE_FINAL"
        def BASE_URL = "BASE_URL"


        def FIREBASE_SECRATE_NODE_TEST_VALUE = "\"TestDrivers\""
        def FIREBASE_SECRATE_NODE_LIVE_FOR_TESTING_VALUE = "\"LiveForTestingDrivers\""
        def FIREBASE_SECRATE_NODE_VALUE = "\"DrV2\""


        def BASE_URL_DEBUGGING_VALUE = "\"https://ogo.delivery:1000/\"" // test
        //def BASE_URL_LIVE_VALUE = "\"http://ogo.delivery:9999/\""
        def BASE_URL_LIVE_VALUE = "\"https://ogo.delivery:8888/\"" // live


        ////check debug and release both
        debug {
            buildConfigField "String", FIREBASE_SECRATE_NODE, FIREBASE_SECRATE_NODE_VALUE
            buildConfigField "String", FIREBASE_SECRATE_NODE_TEST, FIREBASE_SECRATE_NODE_TEST_VALUE
            buildConfigField "String", FIREBASE_SECRATE_NODE_LIVE_FOR_TESTING, FIREBASE_SECRATE_NODE_LIVE_FOR_TESTING_VALUE


            buildConfigField "String", FIREBASE_SECRATE_NODE_FINAL, FIREBASE_SECRATE_NODE_VALUE
//            buildConfigField "String", BASE_URL, BASE_URL_DEBUGGING_VALUE
            buildConfigField "String", BASE_URL, BASE_URL_LIVE_VALUE


            minifyEnabled false
            firebaseCrashlytics {
                // If you don't need crash reporting for your debug build,
                // you can speed up your build by disabling mapping file uploading.
                /// but i want crash reporting in debug build so i am making it mappingFileUploadEnabled is true
                mappingFileUploadEnabled false
            }


        }


        release {

            buildConfigField "String", FIREBASE_SECRATE_NODE, FIREBASE_SECRATE_NODE_VALUE
            buildConfigField "String", FIREBASE_SECRATE_NODE_TEST, FIREBASE_SECRATE_NODE_TEST_VALUE
            buildConfigField "String", FIREBASE_SECRATE_NODE_LIVE_FOR_TESTING, FIREBASE_SECRATE_NODE_LIVE_FOR_TESTING_VALUE


            buildConfigField "String", FIREBASE_SECRATE_NODE_FINAL, FIREBASE_SECRATE_NODE_VALUE
            buildConfigField "String", BASE_URL, BASE_URL_LIVE_VALUE

//            buildConfigField "String", FIREBASE_SECRATE_NODE_FINAL, FIREBASE_SECRATE_NODE_TEST_VALUE
//            buildConfigField "String", BASE_URL, BASE_URL_DEBUGGING_VALUE

            // When minifyEnabled is set to true, Crashlytics automatically
            // uploads mapping files because the plugin detects that obfuscation
            // is enabled. mappingFileUploadEnabled defaults to true if
            // minifyEnabled is true.
            ///
            zipAlignEnabled true
            debuggable false
            signingConfig signingConfigs.release
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
}


///default dependency
dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // or "kotlin-stdlib-jdk8"
    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.0-RC2"
    //" // JVM dependency

    //#####################################################################
    //          Support Library
    //#####################################################################
    def support_library_version = '28.0.0'
    implementation "com.android.support:appcompat-v7:${support_library_version}"
    implementation "com.android.support:support-v4:${support_library_version}"
    implementation "com.android.support:design:${support_library_version}"
    implementation "com.android.support:recyclerview-v7:${support_library_version}"
    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'


    implementation project(':appOoOAlertDialog')


}


/// project dependency
dependencies {


    implementation 'com.google.code.gson:gson:2.8.8'
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'

    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'

    implementation 'com.github.bumptech.glide:glide:4.11.0'

    def langVersion = '20030203.000129'
    implementation "commons-lang:commons-lang:$langVersion"

    //#####################################################################
    //          Google Play Services
    //#####################################################################
    //def google_play_services_version = '11.6.2'
    // implementation "com.google.android.gms:play-services-location:${google_play_services_version}"

    //def google_play_services_version = '17.1.0'

    implementation "com.google.android.gms:play-services-location:18.0.0"
    implementation "com.google.android.gms:play-services-maps:17.0.1"
    //Barcode vision API
    implementation 'com.google.android.gms:play-services-vision:20.1.3'
    implementation "com.google.android.gms:play-services-analytics:17.0.1"
    // implementation "com.google.android.gms:play-services-ads:${google_play_services_version}"


    //#####################################################################
    //          Firebase
    //#####################################################################

    // Import the Firebase BoM
//    implementation platform('com.google.firebase:firebase-bom:25.12.0')
    // When using the BoM, you don't specify versions in Firebase library dependencies

    // Declare the dependency for the Firebase SDK for Google Analytics
    // implementation 'com.google.firebase:firebase-analytics-ktx'

    // Declare the dependencies for any other desired Firebase products
    // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
    // implementation 'com.google.firebase:firebase-auth-ktx'
    // implementation 'com.google.firebase:firebase-firestore-ktx'

    // Add the Firebase Crashlytics SDK.
//    implementation 'com.google.firebase:firebase-crashlytics'
    // Recommended: Add the Google Analytics SDK.
//    implementation 'com.google.firebase:firebase-analytics-ktx'


    //def firebase_version = '11.6.2'
    //implementation "com.google.firebase:firebase-auth:${google_play_services_version}"

//    implementation "com.google.firebase:firebase-messaging"
//    implementation "com.google.firebase:firebase-crash"

//    implementation "com.google.firebase:firebase-core"
//    implementation "com.google.firebase:firebase-database"
//    implementation "com.google.firebase:firebase-config"
//    implementation 'com.google.firebase:firebase-installations'


    implementation 'com.android.support:multidex:1.0.3'


    implementation 'com.google.firebase:firebase-analytics:22.4.0'
    implementation 'com.google.firebase:firebase-storage'
    implementation 'com.google.firebase:firebase-firestore:25.1.3'
    implementation 'com.google.firebase:firebase-messaging:24.1.1'
    implementation 'com.google.firebase:firebase-auth:23.2.0'
    implementation 'com.google.firebase:firebase-database:21.0.0'
    implementation 'com.google.firebase:firebase-config:22.1.0'


    implementation("com.google.firebase:firebase-crashlytics:19.4.2") // Use the latest version
    implementation("com.google.firebase:firebase-analytics:22.4.0")
    implementation("com.google.firebase:firebase-storage:21.0.1")
    implementation(platform("com.google.firebase:firebase-bom:33.12.0"))
}


/// other dependency
dependencies {

    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'

    //GIF lib
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.21'
    //EventBus
    implementation 'org.greenrobot:eventbus:3.2.0'
    //butterknife
    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'

    ////SlideView
    implementation 'com.github.MAXDeliveryNG:slideview:1.1.0'
    ////dialogue
//    implementation 'com.github.blennerSilva:AwesomeDialog:2.0.5'
    implementation 'com.github.Haegon:EasyNativeDialog-for-Android:0.3.0'
    implementation 'com.github.Shashank02051997:FancyGifDialog-Android:1.1'
//

    implementation 'com.github.VRGsoftUA:RollingLayoutManager:1.0'
    ///Circuler image
    implementation 'de.hdodenhof:circleimageview:3.0.1'


    //CountryCodePicker
    implementation 'com.hbb20:ccp:2.7.0'

    //****************************
    // third party lib for force update application from google play service
    //These dependencies have been used in this lib so you need to include them acording to gradle 3.0 and upper
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'org.jsoup:jsoup:1.12.1'
    //****************************


    ////material design edit text
    implementation 'com.github.florent37:materialtextfield:1.0.6'

    /// Shimmerlayout
    // implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
    implementation 'com.facebook.shimmer:shimmer:0.5.0'

    // used in to get distant between two geo points  at line org.apache.commons.io

    implementation "androidx.preference:preference-ktx:1.1.1"
    implementation 'com.google.android.material:material:1.5.0-alpha01'

    implementation 'androidx.work:work-runtime-ktx:2.7.1'
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.squareup.picasso:picasso:2.71828'


    implementation 'com.crowdfire.cfalertdialog:cfalertdialog:1.3.1'
    ////TypeWriterView
    implementation 'in.codeshuffle:typewriterview:1.1.0'

    //Bubble Navigation
    implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
    //// graph
    implementation 'com.jjoe64:graphview:4.2.2'
    ///rating
    implementation 'com.github.sujithkanna:smileyrating:2.0.0'
    implementation 'com.agrawalsuneet.androidlibs:loaderspack:1.2.3'


//    api project(':cfalertdialog')

}





